--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <meta name="description" content="Temporizador 2.0">
   <title>FocusTimer 2.0</title>
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/x-svg"  href="favicon.svg">    
+  <link rel="icon" type="image/x-svg"  href="./assets/favicon.svg">
+  <script type="module" src="src/main.js" defer></script>  
 </head>
 
 <body>
