--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-svg"  href="./assets/favicon.svg">
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <script type="module" src="src/main.js" defer></script>  
 </head>
 
 <body>
   <main>
-    <div class="content">    
+    <div class="content">
+      <button id="toggle-mode">
+        <span class="sr-only">Ativar Light Mode</span>
+        <i class="ph-bold ph-sun"></i>
+        <i class="ph-bold ph-moon"></i>
+      </button>
+
       <div class="timer">
         <div class="display">
           <span id="minutes">25 :</span>
